@@ -1,0 +1,5 @@
+language: python
+python:
+  - "2.7"
+install: pip install --use-mirrors xbmcswift2 beautifulsoup requests
+script: python -m unittest resources.tests.test_addon_unit
