@@ -1,6 +1,7 @@
 1.0.6
 - Error when course unavailable via XBMC
 - Cleaned up tests
+- travis integration
 
 1.0.5
 - Updated Course Catalog to use api instead of page scraping
